--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -19,6 +19,7 @@ spec:
     controller-tools.k8s.io: "1.0"
   ports:
   - port: 443
+    targetPort: 9876
 ---
 apiVersion: apps/v1
 kind: StatefulSet
@@ -53,9 +54,16 @@ spec:
         operator: Exists
       containers:
       - command:
-        - /root/manager
-        image: controller:latest
+        - /bin/sh
+        - -c
+        - ls /tmp/cert/cert.pem || (mkdir -p /tmp/cert && touch /tmp/cert/cert.pem && touch /tmp/cert/key.pem) && exec /root/manager
+        image: docker.io/alvaroaleman/cluster-api-controller-webhook:1
         name: manager
+        env:
+          - name: POD_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
         resources:
           limits:
             cpu: 100m
@@ -63,4 +71,11 @@ spec:
           requests:
             cpu: 100m
             memory: 20Mi
+        volumeMounts:
+          - name: webhook-server-secret
+            mountPath: /tmp/cert
       terminationGracePeriodSeconds: 10
+      volumes:
+        - name: webhook-server-secret
+          secret:
+            secretName: webhook-server-secret
